test/should_fail/inh_model_010.gm
edge class A extends B;
edge class B extends C,D;
edge class D extends E;
edge class E extends A;
edge class C extends A;
